[package]
name = "hash40"
description = "Library for working with Hash40 types in Smash Ultimate"
repository = "https://github.com/BenHall-7/hash40-rs"
license = "MIT"
version = "1.1.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[dependencies]
bimap = "0.6"
byteorder = "1.3"
crc = { git = "https://github.com/BenHall-7/crc-rs.git", rev = "7cf646666ca2a81ee7bc2efc0ce1612814d9ccff" }
diff-struct = "0.3"
lazy_static = "1.4"
serde = "1"
