[package]
name = "hash40"
description = "Library for working with Hash40 types in Smash Ultimate"
repository = "https://github.com/BenHall-7/hash40-rs"
license = "MIT"
version = "1.3.0"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
bimap = "0.6"
binrw = "0.11.1"
byteorder = "1.3"
diff-struct = { version = "0.3" }
lazy_static = "1.4"
serde = { version = "1", optional = true }
